--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -33,10 +33,29 @@ a {
 
 .container {
     width: 100%;
+    max-width: 100vw;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
+
+@media (min-width: 576px){
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }    
+}
+
+@media (min-width: 992px){
+    .container {
+        max-width: 960px;
+    }   
 }
 
 @media (min-width: 1200px) {
@@ -47,7 +66,7 @@ a {
 
 @media (min-width: 1400px) {
     .container {
-        max-width: 1300px;
+        max-width: 1200px;
     }
 }
 
