--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -61,6 +61,7 @@ h1, h2, h3, h4 {
 
 .display-2 {
     font-size: 88px;
+    font-family: 'Cera CY Regular';
 }
 
 .display-3 {
@@ -73,4 +74,16 @@ h1, h2, h3, h4 {
 
 .text-right {
     text-align: right;
+}
+
+p {
+    line-height: 1.6;
+    font-size: 16px;
+    margin-bottom: 15px;
+    a, .highlight {
+        -webkit-text-decoration: $yellow solid underline;
+        text-decoration: $yellow solid underline;
+        -webkit-text-underline-position: auto;
+        text-underline-position: auto;
+    }
 }
