--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -7,6 +7,9 @@
     display: flex;
     margin: 0 auto;
     @include shadow;
+    @media (max-width: 992px) {
+        margin-bottom: 30px;
+    }
 }
 
 .col-wrapper {
@@ -22,9 +25,24 @@
 
 .about-content {
     padding-right: 80px;
+    @media (max-width: 992px) {
+        padding: 0;
+    }
 }
 
 #about {
     display: grid;
     place-items: center;
+    padding: 0 50px;
+    @media (max-width: 767px) {
+        padding-top: 80px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    @media (min-width: 768px) and (max-width: 992px){
+        padding: 0;
+        .col-wrapper {
+            flex-direction: column;
+        }
+    }
 }
