--- a/scss/_detail.scss
+++ b/scss/_detail.scss
@@ -4,6 +4,20 @@
     place-items: center;
     padding-top: 100px;
     padding-bottom: 100px;
+    @media (max-width: 767px) {
+        .container {
+            padding-right: 20px;
+            padding-left: 20px;
+        }
+        .socials {
+            display: none;
+        }
+    }
+    @media (min-width: 768px) and (max-width: 1024px){
+        .socials {
+            display: none;
+        }
+    }
 }
 
 .project-img {
@@ -21,4 +35,10 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
+    @media (max-width: 767px) {
+        flex-direction: column-reverse;
+        .btn {
+            margin: 0 0 60px;
+        }
+    }
 }
