--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,17 +6,46 @@
     right: 0;
     padding: 30px 60px;
     z-index: 1;
+    transition: all .3s ease-in-out;
+    @media (max-width: 767px) {
+        padding: 15px 20px;
+    }
     .logo {
         height: 100px;
     }
 }
 
-.navbar ul {
+.navbar {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 }
 
 .navbar li {
     margin-right: 15px;
     margin-left: 15px;
+    @media (max-width: 767px) {
+        font-size: 14px;
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .scrolled .header {
+        background-color: $secondary;
+        z-index: 10;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px){
+    .header {
+        padding: 30px 40px;
+    }
 }
