--- a/scss/_socials.scss
+++ b/scss/_socials.scss
@@ -9,4 +9,11 @@
         width: 15px;
         margin-top: 10px;
     }
+    @media (max-width: 992px) {
+        padding: 15px;
+        position: absolute;
+    }
+    @media (min-width: 768px) and (max-width: 1024px){
+        padding: 30px 40px;
+    }
 }
