--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -34,6 +34,12 @@ h3 {
 
 h4 {
     font-size: 24px;
+    @media (max-width: 767px) {
+        &.logo-text {
+            font-size: 20px;
+            width: 75px;
+        }
+    }
 }
 
 h5 {
@@ -57,11 +63,17 @@ h1, h2, h3, h4 {
     font-size: 200px;
     letter-spacing: 3px;
     text-shadow: 1px 1px 30px $secondary;
+    @media (max-width: 767px) {
+        font-size: 100px;
+    }
 }
 
 .display-2 {
     font-size: 88px;
     font-family: 'Cera CY Regular';
+    @media (max-width: 767px) {
+        font-size: 60px;
+    }
 }
 
 .display-3 {
