--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,5 @@
-$primary: #ddd;
-$secondary: #16171d;
-$yellow:#ffc600;
 @import "_reset.scss";
+@import "_colour.scss";
 @import "_global.scss";
 @import "_mixins.scss";
 @import "_typography.scss";
