--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,23 +1,27 @@
 body {
     font-family: "Cera CY Regular", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
+        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+        sans-serif;
     letter-spacing: 0.5px;
+    font-size: 18px;
 }
 
 @font-face {
     font-family: 'Cera CY Regular';
-    src: url('./../fonts/Cera-CY-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('./../fonts/Cera-CY-Regular.ttf') format('truetype');
+    /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 @font-face {
     font-family: 'Cera CY Bold';
-    src: url('./../fonts/Cera-CY-Bold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('./../fonts/Cera-CY-Bold.ttf') format('truetype');
+    /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 @font-face {
     font-family: 'Cera Black';
-    src: url('./../fonts/Cera-Black.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('./../fonts/Cera-Black.ttf') format('truetype');
+    /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 h1 {
@@ -34,6 +38,7 @@ h3 {
 
 h4 {
     font-size: 24px;
+
     @media (max-width: 767px) {
         &.logo-text {
             font-size: 20px;
@@ -49,20 +54,23 @@ h5 {
 h6 {
     font-size: 14px;
     letter-spacing: 2px;
-    font-weight: light;
-    color: rgba($primary, .7);
+    font-family: 'Cera CY Bold', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-family: "Cera Black", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
+        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+        sans-serif;
 }
 
 .display-1 {
     font-size: 200px;
     letter-spacing: 3px;
-    text-shadow: 1px 1px 30px $secondary;
+
     @media (max-width: 767px) {
         font-size: 100px;
     }
@@ -71,6 +79,7 @@ h1, h2, h3, h4 {
 .display-2 {
     font-size: 88px;
     font-family: 'Cera CY Regular';
+
     @media (max-width: 767px) {
         font-size: 60px;
     }
@@ -90,12 +99,34 @@ h1, h2, h3, h4 {
 
 p {
     line-height: 1.6;
-    font-size: 16px;
+    font-size: 18px;
     margin-bottom: 15px;
-    a, .highlight {
+
+    a,
+    .highlight {
         -webkit-text-decoration: $yellow solid underline;
         text-decoration: $yellow solid underline;
         -webkit-text-underline-position: under;
         text-underline-position: under;
+    }
+}
+
+.lightMode {
+    .display-1 {
+        text-shadow: 1px 1px 30px $primary;
+    }
+
+    h6 {
+        color: rgba($secondary, .7);
+    }
+}
+
+.darkMode {
+    .display-1 {
+        text-shadow: 1px 1px 30px $secondary;
+    }
+
+    h6 {
+        color: rgba($primary, .7);
     }
 }
