Add smooth scrolling. Closes #9

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -99,6 +99,11 @@ a {
     background-color: $black;
     color: $white;
 
+    .parent-smooth-scroll {
+        background-color: $black;
+        color: $white;
+    }
+
     a:not(.btn) {
         color: $white;
     }
