--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -35,6 +35,8 @@
     margin-left: 15px;
     @media (max-width: 767px) {
         font-size: 14px;
+        margin-left: 10px;
+        margin-right: 10px;
         &:last-child {
             margin-right: 0;
         }
