--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,6 @@
 @import "_reset.scss";
 @import "_colour.scss";
+@import "_smoothscroll.scss";
 @import "_global.scss";
 @import "_mixins.scss";
 @import "_typography.scss";
