--- a/scss/_socials.scss
+++ b/scss/_socials.scss
@@ -2,6 +2,8 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    // top: auto;
+    // right: auto;
     padding: 30px 60px;
     z-index: 1;
     svg {
