--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,7 @@
     padding: 30px 60px;
     z-index: 1;
     transition: all .3s ease-in-out;
+    width: 100%;
     @media (max-width: 767px) {
         padding: 15px 20px;
         h3 {
