--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -24,34 +24,27 @@ body {
     /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
-h1 {
+h1, .h1 {
     font-size: 40px;
 }
 
-h2 {
+h2, .h2 {
     font-size: 32px;
 }
 
-h3 {
+h3, .h3 {
     font-size: 28px;
 }
 
-h4 {
+h4, .h4 {
     font-size: 24px;
-
-    @media (max-width: 767px) {
-        &.logo-text {
-            font-size: 20px;
-            width: 75px;
-        }
-    }
 }
 
-h5 {
+h5, .h5 {
     font-size: 20px;
 }
 
-h6 {
+h6, .h6 {
     font-size: 14px;
     letter-spacing: 2px;
     font-family: 'Cera CY Bold', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
@@ -66,6 +59,15 @@ h4 {
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
 }
+
+.logo-text {
+    font-size: 24px;
+    @media (max-width: 767px) {
+        font-size: 20px;
+        width: 75px;
+    }
+}
+
 
 .display-1 {
     font-size: 200px;
