--- a/scss/_detail.scss
+++ b/scss/_detail.scss
@@ -4,26 +4,43 @@
     place-items: center;
     padding-top: 100px;
     padding-bottom: 100px;
+    @media (min-width: 768px) and (max-width: 1024px) {
+        .container {
+            padding-left: 65px;
+            padding-right: 65px;
+        }
+    }
     @media (max-width: 767px) {
+        padding-bottom: 30px;
         .container {
             padding-right: 20px;
             padding-left: 20px;
         }
-        .socials {
-            display: none;
+        .project-desc {
+            padding-left: 40px;
+            padding-right: 40px;
         }
     }
-    @media (min-width: 768px) and (max-width: 1024px){
-        .socials {
-            display: none;
-        }
+}
+
+.detail-page {
+    .socials {
+        padding-bottom: 0;
+        position: fixed;
+        bottom: 45px;
     }
 }
 
 .project-img {
     width: 100%;
     margin-bottom: 30px;
-    @include shadow;
+    // @include shadow(darkMode);
+}
+
+.lightMode {
+    .project-img {
+        @include shadow(lightMode);
+    }
 }
 
 .project-desc {
